Fix text wrapping and centering of rotating landing roles

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -186,11 +186,13 @@
 
 .landing-info {
   position: absolute;
-  right: 50%;
-  transform: translateX(50%);
+  left: 0;
+  right: 0;
   bottom: 40px;
   top: inherit;
   z-index: 9;
+  width: 100%;
+  text-align: center;
 }
 .landing-info h3 {
   font-size: 22px;
@@ -198,18 +200,18 @@
   font-weight: 300;
   color: var(--accentColor);
   margin: 0;
+  text-align: center;
 }
 .landing-info h2 {
   margin: 0;
   margin-top: -20px;
-  margin-left: 20px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   font-size: 32px;
   line-height: 40px;
   position: relative;
   display: flex;
-  flex-wrap: nowrap;
+  justify-content: center;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
@@ -218,17 +220,19 @@
   top: 0;
   left: 0;
   width: 100%;
+  white-space: nowrap;
+  text-align: inherit;
 }
 h2.landing-info-h2 {
   color: #c481ff;
   font-size: 42px;
-  width: 120%;
+  width: 100%;
   margin: 0;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   position: relative;
-  margin-left: -5px;
   height: 1.2em;
+  text-align: inherit;
 }
 .landing-info-h2::after {
   content: "";
@@ -317,6 +321,7 @@ h2.landing-info-h2 {
     transform: translate(0%, -50%);
     right: auto;
     left: 66%;
+    width: 500px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -335,6 +340,7 @@ h2.landing-info-h2 {
     transform: translate(0%, -50%);
     right: auto;
     left: 70%;
+    width: 600px;
   }
 }
 @media screen and (min-width: 1600px) {
